--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^4.6.0",
     "history": "^5.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "pg": "^8.5.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.1"
+    "web-vitals": "^1.1.1",
+    "ws": "^7.4.4"
   },
   "scripts": {
     "start": "react-scripts start",
