--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^4.6.0",
+    "cors": "^2.8.5",
     "history": "^5.0.0",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.5.1",
